; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_css_lex_init.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_css_lex_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lexbuf = type { i8*, i8*, i32, i64, i64, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.lexbuf*, i32*, i8*, i8*)* @css_lex_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @css_lex_init(i32* %0, %struct.lexbuf* %1, i32* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca %struct.lexbuf*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store %struct.lexbuf* %1, %struct.lexbuf** %7, align 8
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load %struct.lexbuf*, %struct.lexbuf** %7, align 8
  %13 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %12, i32 0, i32 6
  store i32* %11, i32** %13, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = load %struct.lexbuf*, %struct.lexbuf** %7, align 8
  %16 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %15, i32 0, i32 5
  store i32* %14, i32** %16, align 8
  %17 = load i8*, i8** %9, align 8
  %18 = load %struct.lexbuf*, %struct.lexbuf** %7, align 8
  %19 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %18, i32 0, i32 0
  store i8* %17, i8** %19, align 8
  %20 = load %struct.lexbuf*, %struct.lexbuf** %7, align 8
  %21 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %20, i32 0, i32 4
  store i64 0, i64* %21, align 8
  %22 = load i8*, i8** %10, align 8
  %23 = load %struct.lexbuf*, %struct.lexbuf** %7, align 8
  %24 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %23, i32 0, i32 1
  store i8* %22, i8** %24, align 8
  %25 = load %struct.lexbuf*, %struct.lexbuf** %7, align 8
  %26 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %25, i32 0, i32 2
  store i32 1, i32* %26, align 8
  %27 = load %struct.lexbuf*, %struct.lexbuf** %7, align 8
  %28 = call i32 @css_lex_next(%struct.lexbuf* %27)
  %29 = load %struct.lexbuf*, %struct.lexbuf** %7, align 8
  %30 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %29, i32 0, i32 3
  store i64 0, i64* %30, align 8
  ret void
}

declare dso_local i32 @css_lex_next(%struct.lexbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
